# nrf_robotswarm

./: .gitignore  CMakeLists.txt  Kconfig.sbr  README.rst  west.yml
lib/: CMakeLists.txt  Kconfig
samples/app_event_manager/: CMakeLists.txt  Kconfig  prj.conf
samples/app_event_manager/drivers/: CMakeLists.txt
samples/app_event_manager/drivers/motors/: motor.h
samples/app_event_manager/src/: main.c
samples/aws_ble_mesh_gateway/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/aws_ble_mesh_gateway/boards/: nrf9160dk_nrf9160_ns.overlay
samples/aws_ble_mesh_gateway/src/: main.c  model_handler.c  model_handler.h
samples/aws_ble_mesh_gateway/src/events/: CMakeLists.txt  app_module_event.c  app_module_event.h  cloud_module_event.c  cloud_module_event.h  modem_module_event.c  modem_module_event.h  robot_module_event.c  robot_module_event.h  ui_module_event.c  ui_module_event.h
samples/aws_ble_mesh_gateway/src/modules/: CMakeLists.txt  Kconfig.cloud_module  Kconfig.mesh_module  Kconfig.modem_module  Kconfig.robot_module  cloud_module.c  mesh_module.c  modem_module.c  robot_module.c  ui_module.c
samples/mesh_bot/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160_ns.overlay  prj.conf
samples/mesh_bot/boards/: nrf52840dk_nrf52840.overlay
samples/mesh_bot/src/: main.c  model_handler.c  model_handler.h
samples/mesh_model_defines/: robot_movement_cli.h  robot_movement_srv.h
samples/midi/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf  sample.yaml
samples/midi/src/: main.c
subsys/: CMakeLists.txt  Kconfig
zephyr/: module.yml
(+22 files in other folders)
